# agente-feedback-conversacional

./: # 1.sh  .env.example  .gitignore  1.sh  2.sh  BACKUP_AND_RESTORE.md  DEMO_PLAYBOOK.md  EC2_OPERATIONS.md  Makefile  PRIVACY_AND_RETENTION.md  README.md  RENDER_DEPLOY.md  USER_MANUAL.md  alembic.ini  debug_500.py  implementation_plan.md.resolved  list_models.py  mvp_feedback_agent_operational_spec.md  pyproject.toml  render.yaml  test_api.py  test_llm.py
.streamlit/: config.toml
app/: main.py
app/api/: dependencies.py
app/core/: config.py  database.py  logging.py  observability.py  public_access.py  secret_store.py  security.py
app/models/: __init__.py  admin_session.py  admin_user.py  ai_settings.py  analysis_run.py  message.py  participant.py  response.py  session.py  settings_audit_log.py  theme.py
migrations/: env.py
scripts/: backup.sh  backup_verify.sh  common.sh  doctor.sh  ec2_bootstrap.sh  ec2_install_https.sh  ec2_install_systemd.sh  ec2_logs.sh  ec2_run_admin.sh  ec2_run_api.sh  ec2_setup_app.sh  ec2_status.sh  ec2_stop.sh  ec2_sync_public_ip.sh  restore.sh  run_all.sh  run_api.sh  run_streamlit.sh  seed_demo_data.py  start.sh  status.sh  stop_all.sh  test.sh
streamlit_app/: Home.py  ui.py
tests/: conftest.py  test_admin_security.py  test_ai_settings_security.py  test_ai_settings_security_api.py  test_conversation_service.py  test_exports.py  test_health.py  test_observability.py  test_privacy_controls.py  test_public_conversation_flow.py  test_public_endpoints.py  test_session_lifecycle.py  test_sessions_integration.py
(+48 files in other folders)
